# tool-manager

./: .gitignore  Makefile  README.md  env-example  pyproject.toml  tool-manager.db
db/: connection.py  migrate.py
tool_manager/: app.py  color_map.py  config.py  main.py  utils.py
tool_manager/booking/: views.py
tool_manager/home/: views.py
tool_manager/statistic/: views.py
tool_manager/tools/: crud.py  services.py  views.py
tool_manager/users/: crud.py  services.py  views.py
